tests/snapshots/exec__add_sub_cmp.snap
---
source: tests/exec.rs
description: add_sub_cmp
expression: app_output
---
mov bx, 61443
mov cx, 3841
sub bx, cx
mov sp, 998
mov bp, 999
cmp bp, sp
add bp, word 1027
sub bp, word 2026

Registers {
    ax: 0x0000 (0),
    bx: 0xe102 (57602),
    cx: 0x0f01 (3841),
    dx: 0x0000 (0),
    sp: 0x03e6 (998),
    bp: 0x0000 (0),
    si: 0x0000 (0),
    di: 0x0000 (0),
    flags: Z,
}

