tests/snapshots/exec__ip_tracking.snap
---
source: tests/exec.rs
description: ip_register
expression: app_output
---
mov cx, 200 ; cx:0x0->0xc8, ip:0x0->0x3, 
mov bx, cx ; bx:0x0->0xc8, ip:0x3->0x5, 
add cx, word 1000 ; cx:0xc8->0x4b0, ip:0x5->0x9, 
mov bx, 2000 ; bx:0xc8->0x7d0, ip:0x9->0xc, 
sub cx, bx ; cx:0x4b0->0xfce0, ip:0xc->0xe, flags:->S

Final registers:
   ax: 0x0000 (0)
   bx: 0x07d0 (2000)
   cx: 0xfce0 (64736)
   dx: 0x0000 (0)
   sp: 0x0000 (0)
   bp: 0x0000 (0)
   si: 0x0000 (0)
   di: 0x0000 (0)
   ip: 0x000e (14)
flags: S

