tests/snapshots/exec__memory_add_loop-2.snap
---
source: tests/exec.rs
description: add_loop_challenge
expression: app_output
---
mov dx, 6 ; dx:0x0->0x6, ip:0x0->0x3, 
mov bp, 1000 ; bp:0x0->0x3e8, ip:0x3->0x6, 
mov si, 0 ; ip:0x6->0x9, 
mov [bp + si], si ; ip:0x9->0xb, 
add si, word 2 ; si:0x0->0x2, ip:0xb->0xe, 
cmp si, dx ; ip:0xe->0x10, flags:->S
jne $-9 ; ip:0x10->0x9, 
mov [bp + si], si ; ip:0x9->0xb, 
add si, word 2 ; si:0x2->0x4, ip:0xb->0xe, flags:S->
cmp si, dx ; ip:0xe->0x10, flags:->S
jne $-9 ; ip:0x10->0x9, 
mov [bp + si], si ; ip:0x9->0xb, 
add si, word 2 ; si:0x4->0x6, ip:0xb->0xe, flags:S->
cmp si, dx ; ip:0xe->0x10, flags:->Z
jne $-9 ; ip:0x10->0x12, 
mov bx, 0 ; ip:0x12->0x15, 
mov si, dx ; ip:0x15->0x17, 
sub bp, word 2 ; bp:0x3e8->0x3e6, ip:0x17->0x1a, flags:Z->
add bx, [bp + si] ; bx:0x0->0x4, ip:0x1a->0x1c, 
sub si, word 2 ; si:0x6->0x4, ip:0x1c->0x1f, 
jne $-7 ; ip:0x1f->0x1a, 
add bx, [bp + si] ; bx:0x4->0x6, ip:0x1a->0x1c, 
sub si, word 2 ; si:0x4->0x2, ip:0x1c->0x1f, 
jne $-7 ; ip:0x1f->0x1a, 
add bx, [bp + si] ; ip:0x1a->0x1c, 
sub si, word 2 ; si:0x2->0x0, ip:0x1c->0x1f, flags:->Z
jne $-7 ; ip:0x1f->0x21, 

Final registers:
   ax: 0x0000 (0)
   bx: 0x0006 (6)
   cx: 0x0000 (0)
   dx: 0x0006 (6)
   sp: 0x0000 (0)
   bp: 0x03e6 (998)
   si: 0x0000 (0)
   di: 0x0000 (0)
   ip: 0x0021 (33)
flags: Z

