tests/snapshots/exec__memory_add_loop.snap
---
source: tests/exec.rs
description: memory_add_loop
expression: app_output
---
mov dx, 6 ; dx:0x0->0x6, ip:0x0->0x3, 
mov bp, 1000 ; bp:0x0->0x3e8, ip:0x3->0x6, 
mov si, 0 ; ip:0x6->0x9, 
mov [bp + si], si ; ip:0x9->0xb, 
add si, word 2 ; si:0x0->0x2, ip:0xb->0xe, 
cmp si, dx ; ip:0xe->0x10, flags:->S
jne $-9 ; ip:0x10->0x9, 
mov [bp + si], si ; ip:0x9->0xb, 
add si, word 2 ; si:0x2->0x4, ip:0xb->0xe, flags:S->
cmp si, dx ; ip:0xe->0x10, flags:->S
jne $-9 ; ip:0x10->0x9, 
mov [bp + si], si ; ip:0x9->0xb, 
add si, word 2 ; si:0x4->0x6, ip:0xb->0xe, flags:S->
cmp si, dx ; ip:0xe->0x10, flags:->Z
jne $-9 ; ip:0x10->0x12, 
mov bx, 0 ; ip:0x12->0x15, 
mov si, 0 ; si:0x6->0x0, ip:0x15->0x18, 
mov cx, [bp + si] ; ip:0x18->0x1a, 
add bx, cx ; ip:0x1a->0x1c, 
add si, word 2 ; si:0x0->0x2, ip:0x1c->0x1f, flags:Z->
cmp si, dx ; ip:0x1f->0x21, flags:->S
jne $-11 ; ip:0x21->0x18, 
mov cx, [bp + si] ; cx:0x0->0x2, ip:0x18->0x1a, 
add bx, cx ; bx:0x0->0x2, ip:0x1a->0x1c, flags:S->
add si, word 2 ; si:0x2->0x4, ip:0x1c->0x1f, 
cmp si, dx ; ip:0x1f->0x21, flags:->S
jne $-11 ; ip:0x21->0x18, 
mov cx, [bp + si] ; cx:0x2->0x4, ip:0x18->0x1a, 
add bx, cx ; bx:0x2->0x6, ip:0x1a->0x1c, flags:S->
add si, word 2 ; si:0x4->0x6, ip:0x1c->0x1f, 
cmp si, dx ; ip:0x1f->0x21, flags:->Z
jne $-11 ; ip:0x21->0x23, 

Final registers:
   ax: 0x0000 (0)
   bx: 0x0006 (6)
   cx: 0x0004 (4)
   dx: 0x0006 (6)
   sp: 0x0000 (0)
   bp: 0x03e8 (1000)
   si: 0x0006 (6)
   di: 0x0000 (0)
   ip: 0x0023 (35)
flags: Z

