tests/snapshots/exec__movs.snap
---
source: tests/exec.rs
description: immediate_movs
expression: app_output
---
mov ax, 1
mov bx, 2
mov cx, 3
mov dx, 4
mov sp, 5
mov bp, 6
mov si, 7
mov di, 8

Registers {
    ax: 0x0001 (1),
    bx: 0x0002 (2),
    cx: 0x0003 (3),
    dx: 0x0004 (4),
    sp: 0x0005 (5),
    bp: 0x0006 (6),
    si: 0x0007 (7),
    di: 0x0008 (8),
    flags: ,
}

